# poseidon-garmin-api

./: .env  .gitignore  idb.py  pyproject.toml  requirements.txt
api/: __init__.py
api/resources/: garmin_activity.py  garmin_geojson.py
profiler/: GET.garmin.activity.geojson.1284ms.1732839034.prof  GET.garmin.activity.geojson.1376ms.1732840593.prof  GET.garmin.activity.geojson.14078ms.1732778658.prof  GET.garmin.activity.geojson.14505ms.1732777725.prof  GET.garmin.activity.geojson.14741ms.1732777916.prof  GET.garmin.activity.geojson.14ms.1732839251.prof  GET.garmin.activity.geojson.15083ms.1732778009.prof  GET.garmin.activity.geojson.1548ms.1732839501.prof  GET.garmin.activity.geojson.1723ms.1732833775.prof  GET.garmin.activity.geojson.1864ms.1732833846.prof  GET.garmin.activity.geojson.1884ms.1732833195.prof  GET.garmin.activity.geojson.1913ms.1732833753.prof  GET.garmin.activity.geojson.3936ms.1732833675.prof  GET.garmin.activity.geojson.7ms.1732840381.prof
